<resources>
    <string name="app_name">RanChat</string>
    <string name="login">로그인</string>
    <string name="email">이메일 주소</string>
    <string name="password">비밀번호</string>
    <string name="signup">회원가입</string>
    <string name="check">확인</string>
    <string name="nickname">닉네임</string>
    <string name="friend">친구</string>
    <string name="access_user">유저 목록</string>
    <string name="send">전송</string>
    <string name="chatting">채팅</string>
    <string name="exit">나가기</string>
    <string name="see_more">더보기</string>
    <string name="accout_setting">계정 설정</string>
    <string name="profile_chagne">프로필 수정</string>
    <string name="signout">로그아웃</string>
    <string name="bulletin_board">게시판</string>
    <string name="writing">글쓰기</string>
    <string name="complete">완료</string>
</resources>
