<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".SignUpActivity"
    android:background="@android:color/white">



    <TextView
        android:id="@+id/signup_txtvLogin"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/signup"
        android:textColor="@android:color/black"
        android:textSize="24sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_marginTop="30dp"/>

    <ImageView
        android:id="@+id/signup_imgvBack"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="30dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/signup_txtvLogin"
        app:srcCompat="@drawable/baseline_clear_black_36" />


    <TextView
        android:id="@+id/signup_txtvEmail"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/email"
        android:textSize="16sp"
        android:textColor="#BDBDBD"
        app:layout_constraintTop_toBottomOf="@+id/signup_txtvLogin"
        app:layout_constraintStart_toStartOf="parent"
        android:layout_marginTop="40dp"
        android:layout_marginStart="40dp"/>

    <EditText
        android:id="@+id/signup_edtEmail"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:inputType="textEmailAddress"
        android:ems="10"
        android:textSize="22sp"
        android:layout_marginTop="10dp"
        android:layout_marginLeft="40dp"
        android:layout_marginRight="40dp"
        android:hint="@string/email"
        app:layout_constraintTop_toBottomOf="@id/signup_txtvEmail"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:background="@null"
        />
    <View
        android:id="@+id/signup_viewEmailLine"
        android:layout_width="0dp"
        android:layout_height="1dp"
        android:layout_marginTop="10dp"
        android:background="@android:color/darker_gray"
        app:layout_constraintEnd_toEndOf="@+id/signup_edtEmail"
        app:layout_constraintStart_toStartOf="@+id/signup_edtEmail"
        app:layout_constraintTop_toBottomOf="@+id/signup_edtEmail" />
    <TextView
        android:id="@+id/signup_txtvPassword"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/password"
        android:textSize="16sp"
        android:textColor="#BDBDBD"
        app:layout_constraintTop_toBottomOf="@+id/signup_viewEmailLine"
        app:layout_constraintStart_toStartOf="parent"
        android:layout_marginTop="30dp"
        android:layout_marginStart="40dp"/>

    <EditText
        android:id="@+id/signup_edtPassword"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:inputType="textPassword"
        android:ems="10"
        android:textSize="22sp"
        android:maxLength="25"
        android:layout_marginTop="10dp"
        android:layout_marginLeft="40dp"
        android:layout_marginRight="40dp"
        android:hint="비밀번호(6~12자)"
        app:layout_constraintTop_toBottomOf="@id/signup_txtvPassword"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:background="@null"
        />
    <View
        android:id="@+id/signup_viewPasswordLine"
        android:layout_width="0dp"
        android:layout_height="1dp"
        android:layout_marginTop="10dp"
        android:background="@android:color/darker_gray"
        app:layout_constraintEnd_toEndOf="@+id/signup_edtPassword"
        app:layout_constraintStart_toStartOf="@+id/signup_edtPassword"
        app:layout_constraintTop_toBottomOf="@+id/signup_edtPassword" />

    <TextView
        android:id="@+id/signup_txtvNickname"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/nickname"
        android:textSize="16sp"
        android:textColor="#BDBDBD"
        app:layout_constraintTop_toBottomOf="@+id/signup_viewPasswordLine"
        app:layout_constraintStart_toStartOf="parent"
        android:layout_marginTop="30dp"
        android:layout_marginStart="40dp"/>

    <EditText
        android:id="@+id/signup_edtNickname"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:inputType="textPersonName"
        android:ems="10"
        android:textSize="22sp"
        android:layout_marginTop="10dp"
        android:layout_marginLeft="40dp"
        android:layout_marginRight="40dp"
        android:hint="@string/nickname"
        app:layout_constraintTop_toBottomOf="@id/signup_txtvNickname"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:background="@null"
        />
    <View
        android:id="@+id/signup_viewNicknameLine"
        android:layout_width="0dp"
        android:layout_height="1dp"
        android:layout_marginTop="10dp"
        android:background="@android:color/darker_gray"
        app:layout_constraintEnd_toEndOf="@+id/signup_edtNickname"
        app:layout_constraintStart_toStartOf="@+id/signup_edtNickname"
        app:layout_constraintTop_toBottomOf="@+id/signup_edtNickname" />

    <Button
        android:id="@+id/signup_btnCheck"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/check"
        android:textColor="@android:color/white"
        android:textSize="16sp"
        app:layout_constraintTop_toBottomOf="@+id/signup_viewNicknameLine"
        app:layout_constraintStart_toStartOf="@id/signup_viewNicknameLine"
        app:layout_constraintEnd_toEndOf="@id/signup_viewNicknameLine"
        android:layout_marginTop="20dp"
        style="?android:attr/borderlessButtonStyle"
        android:background="#BDBDBD"/>

    <TextView
        android:id="@+id/signup_txtvGuide"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="이미가입하셨나요? 로그인하기"
        android:textColor="@android:color/black"
        app:layout_constraintTop_toBottomOf="@+id/signup_btnCheck"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginTop="10dp"/>


</androidx.constraintlayout.widget.ConstraintLayout>