<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@android:color/white">

    <TextView
        android:id="@+id/setting_txtvTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/see_more"
        android:textColor="@android:color/black"
        android:textSize="24sp"
        android:textStyle="bold"
        android:layout_marginTop="20dp"
        android:layout_marginStart="10dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"/>

    <ImageView
        android:id="@+id/setting_imgv"
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:layout_marginTop="30dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/setting_txtvTitle"
        android:backgroundTint="@android:color/transparent"
        tools:srcCompat="@drawable/baseline_supervised_user_circle_black_48dp2" />

    <TextView
        android:id="@+id/setting_txtvNickName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:text="TextView"
        android:textSize="16sp"
        android:textColor="@android:color/black"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/setting_imgv"/>


    <View
        android:id="@+id/setting_centerView"
        android:layout_width="match_parent"
        android:layout_height="15dp"
        android:layout_marginTop="20dp"
        app:layout_constraintTop_toBottomOf="@+id/setting_txtvNickName"
        app:layout_constraintStart_toEndOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:background="@color/colorGray"/>

    <Button
        android:id="@+id/setting_btnChange"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/profile_chagne"
        android:textSize="16sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/setting_centerView"
        android:background="@android:color/transparent"
        android:gravity="center_vertical"
        android:paddingStart="20dp"/>


    <View
        android:id="@+id/setting_changeView"
        android:layout_width="match_parent"
        android:layout_height="1dp"
        app:layout_constraintTop_toBottomOf="@+id/setting_btnChange"
        app:layout_constraintStart_toEndOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:background="@color/colorGray"/>

    <Button
        android:id="@+id/setting_btnSetting"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/accout_setting"
        android:textSize="16sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/setting_changeView"
        android:background="@android:color/transparent"
        android:gravity="center_vertical"
        android:paddingStart="20dp"/>

    <View
        android:id="@+id/setting_bottomView"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        app:layout_constraintTop_toBottomOf="@id/setting_btnSetting"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toEndOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:background="@color/colorGray"/>



</androidx.constraintlayout.widget.ConstraintLayout>